--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!doctype html>
 <html lang="nl">
 	
-<head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Naam van je site en/of pagina</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-</head>
-
-<body>
-
-	<script src="scripts/script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="author" content="jouw naam">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<title>Discord</title>
+		
+		<link href="styles/style.css" rel="stylesheet">
+	</head>
+	<body>
+		<header>
+			<nav>
+				<ul>
+					<li><a href="index.html"><img src="images/discordlogo.svg" alt="discordlogo"></a></li>
+					<li><a href=""></a><img src="images/menu.svg" alt="menu"></li>
+				</ul>
+			</nav>
+			<h1>Jouw plek om te praten</h1>
+			<p>Of je nu lid bent van een schoolclub, een groep gamers, een internationale community van kunstenaars of gewoon met vrienden wilt hangen, Discord maakt het je makkelijk om elke dag met elkaar te praten en vaker met elkaar om te gaan.</p>
+			<button><img src="images/downloadblack.svg" alt="download">Downloaden uit de App Store</button>
+			<img class="cloud" src="images/cloud.svg" alt="clouds">
+			<img src="images/castleback.svg" alt="castle">
+			<img src="images/onroof.svg" alt="man on roof">
+		</header>
+		<script src="scripts/script.js"></script>
+	</body>
 	
 </html>
