--- a/index.html
+++ b/index.html
@@ -31,22 +31,65 @@
 				<h2>Een plek waar je, op uitnodiging, oeverloos kunt kletsen</h2>
 				<p>Discord-servers zijn op onderwerp georganiseerde kanalen waar je kunt samenwerken, delen en gewoon over je dag kunt kletsen zonder dat je een groepschat spamt.</p>
 			</section>
+			<img class="wave" src="images/wave.svg" alt="animated_waves">
 			<section>
 				<img src="images/section2.svg" alt="discord server">
 				<h2>Waar samenzijn makkelijk is</h2>
 				<p>Neem lekker plaats in een spraakkanaal als je tijd hebt. Vrienden in je server kunnen zien dat je er bent en kunnen zo meedoen, zonder te bellen.</p>
 			</section>
+			<img class="wave" src="images/wave.svg" alt="animated_waves">
 			<section>
 				<img src="images/section3.svg" alt="discord server">
 				<h2>Van een enkeling naar een fandom</h2>
 				<p>Zet een community van elke grootte op, met moderatietools en aangepaste ledentoegang. Geef leden speciale bevoegdheden, stel privékanalen in en nog veel meer.</p>
 			</section>
+			<img class="wave" src="images/wave.svg" alt="animated_waves">
 			<section>
 				<h2>Betrouwbare tech om dichtbij te blijven</h2>
 				<p>Spraak en video met een lage latentietijd geven je het gevoel dat je in dezelfde ruimte bent. Zwaai naar elkaar via video, kijk hoe vrienden hun games streamen of kom samen voor een tekensessie met schermdelen.</p>
 				<img src="images/section4.svg" alt="discord server">
-			</section>	
+			</section>
 		</main>
+		<footer>
+			<h3>Jouw plek om te praten</h3>
+			<button><img src="images/dutch.png" alt="">Nederlands<img src="images/arrowdown.svg" alt=""></button>
+			<ul>
+				<li><a href=""><img src="images/twitter.svg" alt=""></a></li>
+				<li><a href=""><img src="images/instagram.svg" alt=""></a></li>
+				<li><a href=""><img src="images/facebook.svg" alt=""></a></li>
+				<li><a href=""><img src="images/youtube.svg" alt=""></a></li>
+			</ul>
+			<table>
+				<th>Product</th>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<th>Bedrijf</th>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<th>Bronnen</th>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<th>Beleid</th>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</table>
+		</footer>
 		<script src="scripts/script.js"></script>
 	</body>
 	
