--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 				<ul>
 					<li><a href="index.html"><img src="images/discordlogo.svg" alt="discordlogo"></a></li>
 					<li><a href=""></a><img src="images/menu.svg" alt="menu"></li>
+					<li><a href="">Download</a></li>
+					<li><a href="">Waarom Discord?</a></li>
+					<li><a href="">Nitro</a></li>
+					<li><a href="">Veiligheid</a></li>
+					<li><a href="">Ondersteuning</a></li>
 				</ul>
 			</nav>
 			<h1>Jouw plek om te praten</h1>
