--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	</head>
 	<body>
 		<div class="darkbghide darkbg"></div>
+		<div class="balloon">
+			<img class="balloonguy" src="images/balloonguy.svg">
+		</div>
 		<header>
 			<nav>
 				<ul>
@@ -27,12 +30,12 @@
 			<section>
 				<h1>Jouw plek om te praten</h1>
 				<p>Of je nu lid bent van een schoolclub, een groep gamers, een internationale community van kunstenaars of gewoon met vrienden wilt hangen, Discord maakt het je makkelijk om elke dag met elkaar te praten en vaker met elkaar om te gaan.</p>
-				<a href=""><img src="images/downloadblack.svg" alt="download">Downloaden uit de App Store</a href="">
-			</section>
-			<img class="cloud" src="images/cloud.svg" alt="clouds">
-			<img src="images/castleback.svg" alt="castle">
-			<img src="images/onroof.svg" alt="man on roof">
-		</header>
+			<a href=""><img src="images/downloadblack.svg" alt="download">Downloaden uit de App Store</a href="">
+		</section>
+		<img class="cloud" src="images/cloud.svg" alt="clouds">
+		<img src="images/castleback.svg" alt="castle">
+		<img src="images/onroof.svg" alt="man on roof">
+	</header>
 	<main>
 		<div class="menu">
 			<ul>
