--- a/index.html
+++ b/index.html
@@ -1,139 +1,133 @@
 <!doctype html>
-<html lang="nl">
+<html lang="en-US">
 	
 	<head>
 		<meta charset="UTF-8">
-		<meta name="author" content="jouw naam">
+		<meta name="Julian de Cloe" content="Julian de Cloe">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<title>Discord</title>
-		
+		<title>Discord | Your Place to Talk and Hang Out</title>
+		<link rel="icon" href="images/page.ico">
 		<link href="styles/style.css" rel="stylesheet">
 	</head>
-	<body>
+	<body id="home">
 		<div class="darkbghide darkbg"></div>
 		<div class="balloon">
 			<img class="balloonguy" src="images/balloonguy.svg">
 		</div>
+		<nav>
+			<ul>
+				<li><a href="index.html"><img src="images/discordlogo.svg" alt="discordlogo"></a></li>
+				<li><button class="menubutton"><img src="images/menu.svg" alt="menu"></button></li>
+			</ul>
+		</nav>
 		<header>
-			<nav>
-				<ul>
-					<li><a href="index.html"><img src="images/discordlogo.svg" alt="discordlogo"></a></li>
-					<li><button class="menubutton"><img src="images/menu.svg" alt="menu"></button></li>
-					<li><a href="">Download</a></li>
-					<li><a href="">Waarom Discord?</a></li>
-					<li><a href="">Nitro</a></li>
-					<li><a href="">Veiligheid</a></li>
-					<li><a href="">Ondersteuning</a></li>
-				</ul>
-			</nav>
 			<section>
-				<h1>Jouw plek om te praten</h1>
-				<p>Of je nu lid bent van een schoolclub, een groep gamers, een internationale community van kunstenaars of gewoon met vrienden wilt hangen, Discord maakt het je makkelijk om elke dag met elkaar te praten en vaker met elkaar om te gaan.</p>
-			<a href=""><img src="images/downloadblack.svg" alt="download">Downloaden uit de App Store</a href="">
-		</section>
-		<img class="cloud" src="images/cloud.svg" alt="clouds">
-		<img src="images/castleback.svg" alt="castle">
-		<img src="images/onroof.svg" alt="man on roof">
-	</header>
-	<main>
-		<div class="menu">
+				<h1>Your place to talk</h1>
+				<p>Whether you’re part of a school club, gaming group, worldwide art community, or just a handful of friends that want to spend time together, Discord makes it easy to talk every day and hang out more often.</p>
+				<a href=""><img src="images/downloadblack.svg" alt="download">Download from App Store</a>
+			</section>
+			<img class="cloud" src="images/cloud.svg" alt="clouds">
+			<img src="images/castleback.svg" alt="castle">
+			<img src="images/onroof.svg" alt="man on roof">
+		</header>
+		<main>
+			<div class="menu">
+				<ul>
+					<li><a href=""><img src="images/discordwhite.svg" alt=""></a></li>
+					<li><button><img src="images/cross.svg" alt="menu"></button></li>
+				</ul>
+				<ul>
+					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="">Download</a></li>
+					<li><a href="">Why Discord?</a></li>
+					<li><a href="nitro.html">Nitro</a></li>
+					<li><a href="">Safety<img src="images/arrowblack.svg"></a></li>
+					<li><a href="">Support</a></li>
+					<li><a href=""><img src="images/downloadwhite.svg" alt="download">Download from App Store</a></li>
+				</ul>
+			</div>
+			<section class="sectionHidden section">
+				<img src="images/section1.svg" alt="discord server">
+				<h2>An invite-only place with plenty of room to talk</h2>
+				<p>Discord servers are organized into topic-based channels where you can collaborate, share, and just talk about your day without clogging up a group chat.</p>
+			</section>
+			<img class="sectionHidden wave" src="images/wave.svg" alt="animated_waves">
+			<section class="sectionHidden section">
+				<img src="images/section2.svg" alt="discord server">
+				<h2>Where hanging out is easy</h2>
+				<p>Grab a seat in a voice channel when you’re free. Friends in your server can see you’re around and instantly pop in to talk without having to call.</p>
+			</section>
+			<img class="sectionHidden wave" src="images/wave.svg" alt="animated_waves">
+			<section class="sectionHidden section">
+				<img src="images/section3.svg" alt="discord server">
+				<h2>From a few to a fandom</h2>
+				<p>Get a community of any size running with moderation tools and custom member access. Give members special powers, set up private channels, and more.</p>
+			</section>
+			<img class="sectionHidden wave" src="images/wave.svg" alt="animated_waves">
+			<section class="sectionHidden section">
+				<h2>Reliable tech for staying close</h2>
+				<p>Low-latency voice and video feels like you’re in the same room. Wave hello over video, watch friends stream their games, or gather up and have a drawing session with screen share.</p>
+				<img src="images/section4.svg" alt="discord server">
+			</section>
+			<section class="sectionHidden section">
+				<img src="images/stars.svg" alt="">
+				<h3>Ready to start your journey?</h2>
+				<a href=""><img src="images/downloadwhite.svg" alt="download">Download from App Store</a>
+			</section>
+		</main>
+		<footer>
+			<h4>Your place to talk</h4>
+			<button><img src="images/english.png" alt="">English, USA<img src="images/arrowdown.svg" alt=""></button>
 			<ul>
-				<li><a href=""><img src="images/discordwhite.svg" alt=""></a></li>
-				<li><button><img src="images/cross.svg" alt="menu"></button></li>
+				<li><a href=""><img src="images/twitter.svg" alt=""></a></li>
+				<li><a href=""><img src="images/instagram.svg" alt=""></a></li>
+				<li><a href=""><img src="images/facebook.svg" alt=""></a></li>
+				<li><a href=""><img src="images/youtube.svg" alt=""></a></li>
 			</ul>
+			<section>
+				<article>
+					<h5>Product</h5>
+					<a href=""><p>Download</p></a>
+					<a href=""><p>Why Discord?</p></a>
+					<a href=""><p>Inspiration</p></a>
+					<a href=""><p>College</p></a>
+					<a href="nitro.html"><p>Nitro</p></a>
+					<a href=""><p>Status</p></a>
+				</article>
+				<article>
+					<h5>Bedrijf</h5>
+					<a href=""><p>About</p></a>
+					<a href=""><p>Jobs</p></a>
+					<a href=""><p>Branding</p></a>
+					<a href=""><p>Newsroom</p></a>
+				</article>
+				<article>
+					<h5>Bronnen</h5>
+					<a href=""><p>Support</p></a>
+					<a href=""><p>Safety</p></a>
+					<a href=""><p>Blog</p></a>
+					<a href=""><p>Feedback</p></a>
+					<a href=""><p>Partners</p></a>
+					<a href=""><p>Verification</p></a>
+					<a href=""><p>Developers</p></a>
+					<a href=""><p>Streamkit</p></a>
+					<a href=""><p>Open source</p></a>
+					<a href=""><p>Security</p></a>
+				</article>
+				<article>
+					<h5>Beleid</h5>
+					<a href=""><p>Terms</p></a>
+					<a href=""><p>Privacy</p></a>
+					<a href=""><p>Guidelines</p></a>
+					<a href=""><p>Acknowledgements</p></a>
+					<a href=""><p>Licenses</p></a>
+				</article>
+			</section>
 			<ul>
-				<li class="active"><a href="">Startpagina</a></li>
+				<li><a href="index.html"><img src="images/discordlogo.svg" alt="discordlogo"></a></li>
 				<li><a href="">Download</a></li>
-				<li><a href="">Waarom Discord?</a></li>
-				<li><a href="">Nitro</a></li>
-				<li><a href="">Veiligheid<img src="images/arrowblack.svg"></a></li>
-				<li><a href="">Ondersteuning</a></li>
-				<li><a href=""><img src="images/downloadwhite.svg" alt="download">Downloaden uit de App Store</a></li>
 			</ul>
-		</div>
-		<section>
-			<img src="images/section1.svg" alt="discord server">
-			<h2>Een plek waar je, op uitnodiging, oeverloos kunt kletsen</h2>
-			<p>Discord-servers zijn op onderwerp georganiseerde kanalen waar je kunt samenwerken, delen en gewoon over je dag kunt kletsen zonder dat je een groepschat spamt.</p>
-		</section>
-		<img src="images/wave.svg" alt="animated_waves">
-		<section>
-			<img src="images/section2.svg" alt="discord server">
-			<h2>Waar samenzijn makkelijk is</h2>
-			<p>Neem lekker plaats in een spraakkanaal als je tijd hebt. Vrienden in je server kunnen zien dat je er bent en kunnen zo meedoen, zonder te bellen.</p>
-		</section>
-		<img src="images/wave.svg" alt="animated_waves">
-		<section>
-			<img src="images/section3.svg" alt="discord server">
-			<h2>Van een enkeling naar een fandom</h2>
-			<p>Zet een community van elke grootte op, met moderatietools en aangepaste ledentoegang. Geef leden speciale bevoegdheden, stel privékanalen in en nog veel meer.</p>
-		</section>
-		<img src="images/wave.svg" alt="animated_waves">
-		<section>
-			<h2>Betrouwbare tech om dichtbij te blijven</h2>
-			<p>Spraak en video met een lage latentietijd geven je het gevoel dat je in dezelfde ruimte bent. Zwaai naar elkaar via video, kijk hoe vrienden hun games streamen of kom samen voor een tekensessie met schermdelen.</p>
-			<img src="images/section4.svg" alt="discord server">
-		</section>
-		<section>
-			<img src="images/stars.svg" alt="">
-			<h3>Ben je klaar om aan je avontuur te beginnen?</h2>
-			<a href=""><img src="images/downloadwhite.svg" alt="download">Downloaden uit de App Store</a>
-		</section>
-	</main>
-	<footer>
-		<h4>Jouw plek om te praten</h4>
-		<button><img src="images/dutch.png" alt="">Nederlands<img src="images/arrowdown.svg" alt=""></button>
-		<ul>
-			<li><a href=""><img src="images/twitter.svg" alt=""></a></li>
-			<li><a href=""><img src="images/instagram.svg" alt=""></a></li>
-			<li><a href=""><img src="images/facebook.svg" alt=""></a></li>
-			<li><a href=""><img src="images/youtube.svg" alt=""></a></li>
-		</ul>
-		<section>
-			<article>
-				<h5>Product</h5>
-				<a href=""><p>Download</p></a>
-				<a href=""><p>Waarom Discord?</p></a>
-				<a href=""><p>Inspiratie</p></a>
-				<a href=""><p>College</p></a>
-				<a href=""><p>Nitro</p></a>
-				<a href=""><p>Status</p></a>
-			</article>
-			<article>
-				<h5>Bedrijf</h5>
-				<a href=""><p>Over</p></a>
-				<a href=""><p>Vacatures</p></a>
-				<a href=""><p>Branding</p></a>
-				<a href=""><p>Vers van de pers</p></a>
-			</article>
-			<article>
-				<h5>Bronnen</h5>
-				<a href=""><p>Ondersteuning</p></a>
-				<a href=""><p>Veiligheid</p></a>
-				<a href=""><p>Blog</p></a>
-				<a href=""><p>Feedback</p></a>
-				<a href=""><p>Partners</p></a>
-				<a href=""><p>Verificatie</p></a>
-				<a href=""><p>Ontwikkelaars</p></a>
-				<a href=""><p>Streamkit</p></a>
-				<a href=""><p>Open source</p></a>
-				<a href=""><p>Beveiliging</p></a>
-			</article>
-			<article>
-				<h5>Beleid</h5>
-				<a href=""><p>Voorwaarden</p></a>
-				<a href=""><p>Privacy</p></a>
-				<a href=""><p>Richtlijnen</p></a>
-				<a href=""><p>Dankbetuigingen</p></a>
-				<a href=""><p>Licenties</p></a>
-			</article>
-		</section>
-		<ul>
-			<li><a href="index.html"><img src="images/discordlogo.svg" alt="discordlogo"></a></li>
-			<li><a href="">Download</a></li>
-		</ul>
-	</footer>
-	<script src="scripts/script.js"></script>
-</body>
+		</footer>
+		<script src="scripts/script.js"></script>
+	</body>
 </html>
